{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 50,
  "lineage": "b58752cc-a73f-db7f-d560-51c700dc5517",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Interface_de_rede_Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/networkInterfaces/Interface_de_rede_Linux",
            "internal_domain_name_suffix": "hcjrm2mmlzju5mkexhmjjmvv0c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/publicIPAddresses/public-ip-linux",
                "subnet_id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/virtualNetworks/VNET_Azure/subnets/SubredePub"
              }
            ],
            "location": "eastus",
            "name": "Interface_de_rede_Linux",
            "private_ip_address": "172.16.1.5",
            "private_ip_addresses": [
              "172.16.1.5"
            ],
            "resource_group_name": "LaisPamela"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip_linux",
            "azurerm_resource_group.Grupo_de_recursos",
            "azurerm_subnet.Subrede_Publica",
            "azurerm_virtual_network.VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Interface_de_rede_Windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/networkInterfaces/Interface_de_rede_Windows",
            "internal_domain_name_suffix": "hcjrm2mmlzju5mkexhmjjmvv0c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/publicIPAddresses/public-ip-windows",
                "subnet_id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/virtualNetworks/VNET_Azure/subnets/SubredePub"
              }
            ],
            "location": "eastus",
            "name": "Interface_de_rede_Windows",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "LaisPamela"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip_windows",
            "azurerm_resource_group.Grupo_de_recursos",
            "azurerm_subnet.Subrede_Publica",
            "azurerm_virtual_network.VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Grupo_de_Seguranca_Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/networkSecurityGroups/Grupo_de_Segurança_Linux",
            "location": "eastus",
            "name": "Grupo_de_Segurança_Linux",
            "resource_group_name": "LaisPamela",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Grupo_de_recursos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Grupo_de_Seguranca_Windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/networkSecurityGroups/Grupo_de_Segurança_Windows",
            "location": "eastus",
            "name": "Grupo_de_Segurança_Windows",
            "resource_group_name": "LaisPamela",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Grupo_de_recursos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/publicIPAddresses/public-ip-linux",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "public-ip-linux",
            "resource_group_name": "LaisPamela",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Grupo_de_recursos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/publicIPAddresses/public-ip-windows",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "public-ip-windows",
            "resource_group_name": "LaisPamela",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Grupo_de_recursos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subrede_Privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/virtualNetworks/VNET_Azure/subnets/SubredePri",
            "name": "SubredePri",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LaisPamela",
            "virtual_network_name": "VNET_Azure"
          },
          "dependencies": [
            "azurerm_resource_group.Grupo_de_recursos",
            "azurerm_virtual_network.VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subrede_Publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/virtualNetworks/VNET_Azure/subnets/SubredePub",
            "name": "SubredePub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LaisPamela",
            "virtual_network_name": "VNET_Azure"
          },
          "dependencies": [
            "azurerm_resource_group.Grupo_de_recursos",
            "azurerm_virtual_network.VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0631a508-c074-4a0d-9141-aadd847a86eb",
            "id": "/subscriptions/e0203d30-686d-4aed-a9d4-96a88197eb21/resourceGroups/LaisPamela/providers/Microsoft.Network/virtualNetworks/VNET_Azure",
            "location": "eastus",
            "name": "VNET_Azure",
            "resource_group_name": "LaisPamela"
          },
          "dependencies": [
            "azurerm_resource_group.Grupo_de_recursos"
          ]
        }
      ]
    }
  ]
}